[tool.poetry]
name = "mind-algo"
version = "0.1.0"
description = ""
authors = ["MIND <mind@newrelic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
